@@ -1,3 +1,9 @@
+2009-07-01  Alan McGovern  <amcgovern@novell.com>
+
+	* input.cpp: Ensure that we don't flip-flop around the target
+	  point by moving closer by 1 pixel at a time when within 10
+	  pixels of it. Fixes drt 551 (and maybe others?)
+
 2009-07-01  Jeffrey Stedfast  <fejj@novell.com>
 
 	* shutdown-manager.cpp: #include stdlib.h and unistd.h for exit()
